# GamespySDK

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
src/: CMakeLists.txt
src/chat/: CMakeLists.txt  chat.h  chatascii.h  chatcallbacks.c  chatchannel.c  chatcrypt.c  chatcrypt.h  chathandlers.c  chathandlers.h  chatmain.c  chatmain.h  chatsocket.c  chatsocket.h
src/chat/chatc/: chatc.c
src/chat/chatty/: channellistdlg.h  channelmodedlg.h  chatty.h  chattydoc.h  chattyview.h  childfrm.h  connectdlg.h  enterdlg.h  getuserinfodlg.h  kickreasondlg.h  mainfrm.h  resource.h  sendrawdlg.h  setpassworddlg.h  settopicdlg.h  stdafx.h  talkdlg.h
src/common/: CMakeLists.txt  darray.c  darray.h  gsassert.c  gsassert.h  gsavailable.c  gscore.c  gscrypt.c  gsdebug.c  gsdebug.h  gslargeint.c  gsmemory.c  gsmemory.h  gsplatform.c  gsplatformsocket.c  gsplatformthread.c  gsplatformthread.h  gsplatformutil.c  gsrc4.c  gsrc4.h  gssha1.c  gsssl.c  gsstringutil.c  gsstringutil.h  gsxml.c  hashtable.c  hashtable.h  md5c.c  nonport.c  nonport.h
src/common/linux/: gsthreadlinux.c  linuxcommon.c
src/common/macosx/: gsthreadmacosx.c  gsutilmacosx.c  macosxcommon.c
src/common/nitro/: backup.c  font.c  gssocketnitro.c  gsthreadnitro.c  gstimernitro.c  gsutilnitro.c  key.c  key.h  menu.c  menu.h  screen.c  screen.h  touch.c  wireless.c
src/common/ps2/: gssocketps2.c  gsthreadps2.c  gsutilps2.c  ps2common.c  ps2pad.c  ps2pad.h
src/common/ps3/: gssocketps3.c  gsutilps3.c  ps3common.c
src/common/psp/: gssocketpsp.c  gsutilpsp.c  pspcommon.c
src/common/revolution/: gssocketrevolution.c  gsthreadrevoulution.c  gsutilrevolution.c  revolutioncommon.c
src/common/win32/: gsthreadwin32.c  gsutilwin32.c  win32common.c
src/common/x360/: gssocketx360.c  gsthreadx360.c  x360common.c
src/common/xbox/: gssocketxbox.c
src/gcdkey/: CMakeLists.txt  gcdkeyc.c  gcdkeyc.h  gcdkeys.c  gcdkeys.h
src/gcdkey/cdkeygen/: gcdkeygen.c
src/gcdkey/clienttest/: gcdkeyclienttest.c
src/gcdkey/servertest/: gcdkeyservertest.c
src/gcdkey/servertestqr2/: gcdkeyservertest_qr2.c
src/ghttp/: CMakeLists.txt  ghttp.h  ghttpascii.h  ghttpbuffer.c  ghttpbuffer.h  ghttpcallbacks.c  ghttpcallbacks.h  ghttpcommon.c  ghttpconnection.c  ghttpconnection.h  ghttpencryption.c  ghttpencryption.h  ghttpmain.c  ghttpmain.h  ghttppost.c  ghttppost.h  ghttpprocess.c  gssoap.c  gssoap.h
src/ghttp/ghttpc/: ghttpc.c
src/ghttp/ghttpmfc/: resource.h  stdafx.h
src/gp/: CMakeLists.txt  gp.c  gp.h  gpi.c  gpi.h  gpibuddy.c  gpibuddy.h  gpibuffer.c  gpicallback.c  gpicallback.h  gpiconnect.c  gpiinfo.c  gpikeys.c  gpioperation.c  gpipeer.c  gpipeer.h  gpiprofile.c  gpiprofile.h  gpips3.c  gpisearch.c  gpitransfer.c  gpitransfer.h  gpiunique.c  gpiutility.c  gpiutility.h
src/gp/gpstress/: gpstress.c
src/gp/gptest/: resource.h  stdafx.h
src/gp/gptestc/: gptestc.c
src/gstats/: CMakeLists.txt  gbucket.c  gbucket.h  gpersist.h  gstats.c  gstats.h
src/gstats/gp_stats/: gp_stats.h  gp_statsdlg.cpp  gp_statsdlg.h  resource.h  stdafx.h
src/gstats/laddertrack/: hostorjoindlg.h  laddertrack.h  laddertrackdlg.h  logindlg.cpp  logindlg.h  resource.h  stdafx.h  waitingdlg.h
src/gstats/multitrack/: hostorjoindlg.h  logindlg.cpp  logindlg.h  multitrack.h  multitrackdlg.h  resource.h  stdafx.h  waitingdlg.h
src/gstats/persisttest/: persisttest.c
src/gstats/statstest/: statstest.c
src/gstats/track/: logindlg.cpp  logindlg.h  resource.h  stdafx.h  track.h  trackdlg.cpp  trackdlg.h
src/gt2/: CMakeLists.txt  gsudpengine.c  gsudpengine.h  gt2.h  gt2auth.c  gt2auth.h  gt2buffer.c  gt2buffer.h  gt2callback.c  gt2connection.c  gt2connection.h  gt2encode.c  gt2filter.c  gt2filter.h  gt2main.c  gt2main.h  gt2message.c  gt2message.h  gt2socket.c  gt2utility.c  gt2utility.h
src/gt2/gt2action/: gt2aclient.c  gt2aclient.h  gt2adisplay.c  gt2ainput.c  gt2alogic.c  gt2alogic.h  gt2amain.c  gt2amain.h  gt2amath.c  gt2amath.h  gt2aparse.c  gt2aserver.c  gt2asound.c  tgafile.h
src/gt2/gt2hostmig/: gt2hostmig.c
src/gt2/gt2nat/: gt2nat.c
src/gt2/gt2proxy/: gt2proxy.c
src/gt2/gt2test/: resource.h  stdafx.h
src/gt2/gt2testc/: gt2testc.c
src/natneg/: CMakeLists.txt  natify.c  natneg.c  natneg.h  nninternal.h
src/natneg/simpletest/: simpletest.c
src/peer/: CMakeLists.txt  peer.h  peerautomatch.c  peercallbacks.c  peerglobalcallbacks.c  peerhost.c  peerhost.h  peerkeys.c  peerkeys.h  peermain.c  peermain.h  peermangle.c  peermangle.h  peeroperations.c  peeroperations.h  peerping.c  peerplayers.c  peerplayers.h  peerqr.c  peerqr.h  peerrooms.c  peersb.c
src/peer/peerc/: peerc.c
src/peer/peerlobby/: connectpage.h  createpage.h  grouppage.h  lobbywizard.h  peerlobby.h  resource.h  sidebarctrl.cpp  sidebarctrl.h  stagingpage.h  stdafx.h  titlepage.h
src/peer/peertest/: peertest.h  peertestdlg.h  resource.h  stdafx.h
src/pinger/: CMakeLists.txt  pinger.h  pingermain.c
src/pt/: CMakeLists.txt  pt.h  ptmain.c
src/pt/pttestc/: pttestc.c
src/qr/: CMakeLists.txt  gqueryreporting.c
src/qr2/: CMakeLists.txt  qr2.c  qr2.h  qr2regkeys.c  qr2regkeys.h
src/sake/: CMakeLists.txt  sake.h  sakemain.c  sakemain.h  sakerequest.c  sakerequestmisc.c  sakerequestmodify.c  sakerequestread.c
src/sc/: CMakeLists.txt  sc.h  sciinterface.c  sciinterface.h  scimain.c  scireport.c  scireport.h  sciserialize.c  sciserialize.h  sciwebservices.c  sciwebservices.h
src/serverbrowsing/: CMakeLists.txt  sb_ascii.h  sb_crypt.c  sb_crypt.h  sb_internal.h  sb_queryengine.c  sb_server.c  sb_serverbrowsing.c  sb_serverbrowsing.h  sb_serverlist.c
src/stdint/: stdint.h
src/voice2/: CMakeLists.txt  gv.h  gvcodec.c  gvcustomdevice.c  gvdevice.c  gvdirectsound.c  gvdirectsound.h  gvframe.c  gvgsm.c  gvgsm.h  gvlogitechps2codecs.c  gvlogitechps2codecs.h  gvmain.c  gvosxaudio.c  gvps2audio.c  gvps2audio.h  gvps2eyetoy.c  gvps2headset.c  gvps2spu2.c  gvps3audio.c  gvps3headset.c  gvps3headset.h  gvpspaudio.c  gvsource.c  gvsource.h  gvspeex.c  gvspeexspu.c  gvspeexspu.h  gvutil.c  gvutil.h
src/webservices/: CMakeLists.txt  authservice.c  authservice.h
(+162 files in other folders)
